            - Functions abelianisation() and markedAbelianisation() now
              return groups by value (which can then be moved from).
            - New routine abelianRank().
            - New routine relations().
            - Function addRelation() now takes its argument by value.
            - Added member and global swap() functions.
            - Functions intelligentSimplify(), smallCancellation(),
              intelligentNielsen(), homologicalAlignment() and prettyRewriting()
              now return a std::optional<HomGroupPresentation>, not a bool
              (but this can be cast to a bool to give the previous behaviour).
              The corresponding ...Detail() functions are now deprecated
              aliases, and return this same std::optional<HomGroupPresentation>
              instead of a std::unique_ptr<HomGroupPresentation>.  The C++
              syntax should be largely unaffected, and the Python behaviour
              (returns None if there is no homomorphism) should remain the same.
            - Renamed toTeX() to tex().  The old name is kept but deprecated.
            - The short text output from str() is now identical to compact().
            - Other major cleanup and reorganisation under the hood.
        Class Handlebody:
            - This class now only represents orientable handlebodies.
              The old support for non-orientable handlebodies was incomplete
              and was not being used anywhere within Regina.
            - The constructor now takes only one argument (the old orientability
              argument is gone).
            - Renamed handles() to genus().  The old name is kept as a
              deprecated alias.
            - Deprecated isOrientable(), which now always returns true.
            - Added member and global swap() functions.
        Class HasReturnType:
            - Removed completely.
        Class HilbertCD, HilbertDual, HilbertPrimal: