@@ -2936,6 +2936,24 @@ class PacketChildren {
          * @return the past-the-end iterator.
          */
         ChildIterator<const_> end() const;
+
+        /**
+         * Determines whether this and the given object are designed to
+         * iterate over children of the same parent packet.
+         *
+         * @return \c true if and only if this object and \a rhs iterate
+         * over children of the same packet.
+         */
+        bool operator == (const PacketChildren& rhs) const;
+
+        /**
+         * Determines whether this and the given object are designed to
+         * iterate over children of different parent packets.
+         *
+         * @return \c true if and only if this object and \a rhs iterate
+         * over children of different packets.
+         */
+        bool operator != (const PacketChildren& rhs) const;
 };
 
 /**
@@ -3040,6 +3058,24 @@ class PacketDescendants {
          * @return the past-the-end iterator.
          */
         SubtreeIterator<const_> end() const;
+
+        /**
+         * Determines whether this and the given object are designed to
+         * iterate over strict descendants of the same packet.
+         *
+         * @return \c true if and only if this object and \a rhs iterate
+         * over descendants of the same packet.
+         */
+        bool operator == (const PacketDescendants& rhs) const;
+
+        /**
+         * Determines whether this and the given object are designed to
+         * iterate over strict descendants of different packets.
+         *
+         * @return \c true if and only if this object and \a rhs iterate
+         * over descendants of different packets.
+         */
+        bool operator != (const PacketDescendants& rhs) const;
 };
 
 /**
@@ -4084,6 +4120,16 @@ inline ChildIterator<const_> PacketChildren<const_>::end() const {
 }
 
 template <bool const_>
+bool PacketChildren<const_>::operator == (const PacketChildren& rhs) const {
+    return parent_ == rhs.parent_;
+}
+
+template <bool const_>
+bool PacketChildren<const_>::operator != (const PacketChildren& rhs) const {
+    return parent_ == rhs.parent_;
+}
+
+template <bool const_>
 inline SubtreeIterator<const_> PacketDescendants<const_>::begin() const {
     return SubtreeIterator<const_>(subtree_, subtree_->firstChild());
 }
@@ -4091,6 +4137,18 @@ inline SubtreeIterator<const_> PacketDescendants<const_>::begin() const {
 template <bool const_>
 inline SubtreeIterator<const_> PacketDescendants<const_>::end() const {
     return {};
+}
+
+template <bool const_>
+bool PacketDescendants<const_>::operator == (const PacketDescendants& rhs)
+        const {
+    return subtree_ == rhs.subtree_;
+}
+
+template <bool const_>
+bool PacketDescendants<const_>::operator != (const PacketDescendants& rhs)
+        const {
+    return subtree_ == rhs.subtree_;
 }
 
 // Inline functions for PacketShell
